fixes alignment of profile page

--- a/TTWebMVC/TTWebMVCV2/Contents/scss/site.scss
+++ b/TTWebMVC/TTWebMVCV2/Contents/scss/site.scss
@@ -43,3 +43,6 @@ form {
 span.has-icon-left {
    margin-left: 8px;
 }
+.w-100 {
+   width: 100%;
+}
